# MorTweetSRS

./: .gitignore  Cargo.toml  LICENSE  README.md  run-desktop.sh
.github/workflows/: pages.yml  release.yml
desktop/: Cargo.toml  Dioxus.toml  build.rs
desktop/src/: deck_folder.rs  desktop_api.rs  main.rs  web_assets.rs
packaging/: build-packages.sh
packaging/arch/: PKGBUILD  mor-tweet-srs.desktop
web/: README.md  index.html  serve.py
web/css/: app.css  scrollbars.css  tokens.css
web/js/: app.js  cover-audio.js  cover-form.js  cover.js  deck-library.js  import-deck.js  local-library.js  srs.js  store.js  tts.js  twitter.js
