[package]
name = "mor_tweet_srs_desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Desktop shell for MorTweet SRS"
license = "MIT"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-logger = "0.5"
image = "0.25"

[build-dependencies]
walkdir = "2"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.18"