[package]
name = "mor_tweet_srs_desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Desktop shell for MorTweet SRS"
license = "MIT"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-logger = "0.5"
dirs = "6"
image = "0.25"
include_dir = "0.7"
mime_guess = "2"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
walkdir = "2"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.18"